--- a/src/scss/mixins/_mini.scss
+++ b/src/scss/mixins/_mini.scss
@@ -37,7 +37,11 @@
   flex-direction: column;
   align-items: flex-start;
 }
-
+@mixin flex-column-center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 $browser-context: 16; // Default
 
 @function rem($pixels, $context: $browser-context) {
