--- a/src/partials/services-section.html
+++ b/src/partials/services-section.html
@@ -2,7 +2,7 @@
    <div class="container">
       <h2 class="title title--center">Our services</h2>
       <p class="descr descr--center">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
-      <ul class="list-reset services-list services-section__list">
+      <ul class="list-reset services-list services-section__list grid">
          <li class="services-list__item">
             <a href="#" class="services-item services-item--construct">
                <div class="services-item__content">
@@ -44,9 +44,9 @@
             </a>
          </li>
       </ul>
-      <div class="services-section__learn">
-         <h4 class="services-section__subtitle">Learn more about our services</h4>
-         <button class="btn-reset btn btn--fill services-section__btn">View services</button>
+      <div class="services-section__learn learn-more">
+         <h4 class="learn-more__subtitle">Learn more about our services</h4>
+         <a href="#" class="btn-reset btn btn--fill learn-more__btn">View services</a>
       </div>
    </div>
 </section>
