--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -9,4 +9,7 @@
   --color-storm: #787A80;
   --color-ebony: #1e212c;
   --color-primary: #ff5a30;
+  --color-athens: #f4f5f7;
+  --grid-gap: 30px;
+  --grid-cols: 12;
 }
