--- a/src/scss/components/_form-field.scss
+++ b/src/scss/components/_form-field.scss
@@ -13,7 +13,7 @@
       border: 1px solid #D7DADD;
       border-radius: 4px;
       padding-left: 15px;
-      background: #F4F5F7;
+      background: var(--color-athens);
       width: 260px;
       height: 44px;
       font-size: 14px;
@@ -21,12 +21,24 @@
       &::placeholder{
          color: #9A9CA5;
       }
+      &--big{
+         padding-top: 10px;
+         height: 66px;
+         resize: none;
+      }
    }
    &--big{
       flex-grow: 1;
       .form-field__input{
          width: 100%;
 
+      }
+   }
+   &--gray{
+      width: 100%;
+      .form-field__input{
+         width: 100%;
+         background-color: var(--color-athens);
       }
    }
 }
