--- a/src/scss/components/_services-section.scss
+++ b/src/scss/components/_services-section.scss
@@ -9,21 +9,15 @@
       @include flex-all-center;
    }
 
-   &__subtitle{
-      margin: 0 40px 0 0;
-      font-weight: 700;
-      font-size: 28px;
-      line-height: 150%;
-      color: var(--color-ebony);
-   }
    &__list{
       margin-bottom: 80px;
    }
 }
 .services-list{
-   display: grid;
-   grid-template-columns: repeat(4, 1fr);
-   gap: 30px;
+   gap: var(--grid-gap);
+   &__item{
+      grid-column: 3 span;
+   }
 }
 .services-item{
    display: block;
