--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -12,5 +12,9 @@
       font-size: 16px;
       line-height: 26px;
       color: var(--color-gray);
+
+      &--current{
+         color: var(--color-primary);
+      }
    }
 }
