--- a/src/scss/components/_page-hero.scss
+++ b/src/scss/components/_page-hero.scss
@@ -20,6 +20,15 @@
       color: var(--color-ebony);
       text-transform: uppercase;
       margin-bottom: 24px;
+      &--small{
+         font-size: 64px;
+         line-height: 120%;
+         letter-spacing: 1px;
+         text-transform: initial;
+      }
+      &--mb{
+         margin-bottom: 60px;
+      }
    }
    &__descr{
       margin: 0;
@@ -33,5 +42,20 @@
    }
    &--services-inner{
       background-image: url("../img/services-inner-hero-bg.png");
+   }
+   &--work{
+      background-image: url("../img/work-hero-bg.png");
+   }
+   &--work-inner{
+      background-color: var(--color-light);
+      background-image: url("../img/work-inner-hero-bg.png");
+      background-position: right -8px top 48px;
+   }
+   &--about{
+      background-image: url("../img/about-hero-bg.png");
+   }
+   &--positions{
+      background-position: right -9px bottom;
+      background-image: url("../img/hero-positions-bg.png");
    }
 }
