--- a/src/scss/components/_related-projects.scss
+++ b/src/scss/components/_related-projects.scss
@@ -1,6 +1,7 @@
 .related-projects{
    background-color: var(--color-light);
-   padding: 180px 0 120px 0;
+   padding-top: 180px;
+   padding-bottom: 100px;
    &__top{
       display: flex;
       align-items: flex-end;
@@ -39,7 +40,7 @@
    display: flex;
    flex-direction: column;
    background: var(--color-light);
-   box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+   box-shadow: var(--main-shadow);
    border-radius: 4px;
 
    &__content{
