--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,3 +33,16 @@
 @import "./components/services-benefits";
 @import "./components/related-projects";
 @import "./components/portfolio-item";
+@import "./components/pricing";
+@import "./components/portfolio";
+@import "./components/clients";
+@import "./components/work-images";
+@import "./components/project-goal";
+@import "./components/decisions";
+@import "./components/achieve";
+@import "./components/about-mission";
+@import "./components/history";
+@import "./components/team";
+@import "./components/worldwide";
+@import "./components/positions-content";
+@import "./components/employee-benefits";
