--- a/src/partials/recent-news.html
+++ b/src/partials/recent-news.html
@@ -3,49 +3,49 @@
       <h2 class="title title--center recent-news__title">Recent news</h2>
       <ul class="list-reset recent-news__list grid">
          <li class="recent-news__item">
-            <article class="recent-article">
-               <img src="img/recent-article-1.jpg" alt="article 1" class="recent-article__image recent-article__image--big">
-               <div class="recent-article__text">
-                  <h3 class="recent-article__title">
-                     <a href="#" class="recent-article__link">How to Build Climate Change-Resilient Infrastructure</a>
-                     <div class="recent-article__meta article-meta">
+            <article class="news-article">
+               <img src="img/recent-article-1.jpg" alt="article 1" class="news-article__image news-article__image--big">
+               <div class="news-article__text">
+                  <h3 class="news-article__title">
+                     <a href="#" class="news-article__link">How to Build Climate Change-Resilient Infrastructure</a>
+                     <div class="news-article__meta article-meta">
                         <a href="" class="article-meta__item">Industry News</a>
                         <time class="article-meta__item" datetime="2020-06-24 19:00">June 24, 2020</time>
                         <span class="artilce-meta__item article-meta__item--comments">4 comments</span>
                      </div>
-                     <p class="recent-article__descr">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
+                     <p class="news-article__descr">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
                   </h3>
                </div>
             </article>
          </li>
          <li class="recent-news__item">
-            <article class="recent-article recent-article--small">
-               <img src="img/recent-article-2.jpg" alt="article 2" class="recent-article__image">
-               <div class="recent-article__text">
-                  <h3 class="recent-article__title">
-                     <a href="#" class="recent-article__link">How Construction Can Help Itself</a>
-                     <div class="recent-article__meta article-meta">
+            <article class="news-article news-article--small">
+               <img src="img/recent-article-2.jpg" alt="article 2" class="news-article__image">
+               <div class="news-article__text">
+                  <h3 class="news-article__title">
+                     <a href="#" class="news-article__link">How Construction Can Help Itself</a>
+                     <div class="news-article__meta article-meta">
                         <a href="" class="article-meta__item">Innovation</a>
                         <time class="article-meta__item" datetime="2020-06-12 19:00">June 12, 2020</time>
                         <span class="artilce-meta__item article-meta__item--comments">No comments</span>
                      </div>
-                     <p class="recent-article__descr">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
+                     <p class="news-article__descr">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
                   </h3>
                </div>
             </article>
          </li>
          <li class="recent-news__item">
-            <article class="recent-article recent-article--small">
-               <img src="img/recent-article-3.jpg" alt="article 3" class="recent-article__image">
-               <div class="recent-article__text">
-                  <h3 class="recent-article__title">
-                     <a href="#" class="recent-article__link">Types of Flooring Materials</a>
-                     <div class="recent-article__meta article-meta">
+            <article class="news-article news-article--small">
+               <img src="img/recent-article-3.jpg" alt="article 3" class="news-article__image">
+               <div class="news-article__text">
+                  <h3 class="news-article__title">
+                     <a href="#" class="news-article__link">Types of Flooring Materials</a>
+                     <div class="news-article__meta article-meta">
                         <a href="" class="article-meta__item">Company News</a>
                         <time class="article-meta__item" datetime="2019-12-01 19:00">December 1, 2019</time>
                         <span class="artilce-meta__item article-meta__item--comments">No comments</span>
                      </div>
-                     <p class="recent-article__descr">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
+                     <p class="news-article__descr">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
                   </h3>
                </div>
             </article>
