--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -28,6 +28,7 @@
          display: block;
          width: 100%;
          height: 100%;
+         fill: var(--color-light);
          object-fit: cover;
       }
    }
