допилил верстку десктопа

--- a/src/partials/post-form.html
+++ b/src/partials/post-form.html
@@ -1,5 +1,5 @@
 <form class="post-form">
-   <h2 class="title tile--center post-form__title">Leave your comment</h2>
+   <h2 class="title title--center post-form__title">Leave your comment</h2>
    <div class="post-form__content">
       <label class="form-field form-field--gray post-form__field">
          <span class="form-field__caption">Name*</span>
