--- a/src/scss/components/_comment.scss
+++ b/src/scss/components/_comment.scss
@@ -23,6 +23,17 @@
       a{
          font-weight: 700;
          color: var(--color-primary);
+         transition: color 0.3s ease-in-out;
+         &:focus{
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
+          }
+          &:hover{
+             color: var(--color-primary);
+          }
+          &:active{
+            color: var(--color-active);
+         }
       }
       *{
          margin: 0;
@@ -41,6 +52,7 @@
       font-size: 14px;
       line-height: 150%;
       color: var(--color-storm);
+      transition: color 0.3s ease-in-out;
       svg{
          position: relative;
          top: 2px;
@@ -49,6 +61,16 @@
          fill: currentColor;
          object-fit: cover;
          margin-right: 8px;
+      }
+      &:focus{
+         outline: 2px solid var(--color-primary);
+         outline-offset: 2px;
+       }
+       &:hover{
+          color: var(--color-primary);
+       }
+       &:active{
+         color: var(--color-active);
       }
    }
 }
