--- a/src/scss/components/_positions-content.scss
+++ b/src/scss/components/_positions-content.scss
@@ -72,6 +72,17 @@
       font-size: 14px;
       line-height: 44px;
       letter-spacing: 0.5px;
+      transition: color 0.3s ease-in-out;
+      &:focus{
+         outline: 2px solid var(--color-primary);
+         outline-offset: 2px;
+       }
+       &:hover{
+          color: var(--color-primary);
+       }
+       &:active{
+         color: var(--color-active);
+      }
    }
 }
 .positions-looking{
@@ -96,10 +107,32 @@
          margin-right: 22px;
          padding-left: 44px;
          padding-right: 44px;
+         transition: color 0.3s ease-in-out;
+         &:focus{
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
+          }
+          &:hover{
+             color: var(--color-primary);
+          }
+          &:active{
+            color: var(--color-active);
+         }
       }
       &--send{
          padding-right: 54px;
          padding-left: 54px;
+         transition: color 0.3s ease-in-out;
+         &:focus{
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
+          }
+          &:hover{
+             color: var(--color-primary);
+          }
+          &:active{
+            color: var(--color-active);
+         }
       }
    }
 }
