--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -2,12 +2,38 @@
    padding: 54px;
    padding-bottom: 120px;
    &__list{
-      margin-bottom: 20px;
-      row-gap: 0;
+      margin-bottom: 80px;
+      row-gap: 64px;
       column-gap: var(--grid-gap);
+   }
+   &__top{
+      position: relative;
+      margin-bottom: 12px;
+      font-size: 0;
+   }
+   &__socials{
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px 10px;
+      border-radius: 0px 0px 4px 4px;
+      width: 100%;
+      background: rgba(#FF5A30, 0.7);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease-in-out,  visibility 0.3s ease-in-out;
    }
    &__item{
       grid-column: 3 span;
+      &:hover{
+         .team__socials{
+            opacity: 1;
+            visibility: visible;
+         }
+      }
    }
    &__text{
       font-size: 18px;
@@ -17,6 +43,17 @@
       a{
          color: var(--color-primary);
          border-bottom: 1px solid currentColor;
+         transition: color 0.3s ease-in-out;
+         &:focus{
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
+          }
+          &:hover{
+             color: var(--color-active);
+          }
+          &:active{
+            color: var(--color-active);
+         }
       }
    }
    &__link{
@@ -30,6 +67,9 @@
          height: 100%;
          fill: var(--color-light);
          object-fit: cover;
+      }
+      :not(:last-child){
+         margin-right: 12px;
       }
    }
    &__name{
@@ -45,8 +85,5 @@
       font-size: 16px;
       line-height: 160%;
       color: var(--color-storm);
-   }
-   &__image{
-      margin-bottom: 12px;
    }
 }
