--- a/src/partials/about-section.html
+++ b/src/partials/about-section.html
@@ -8,12 +8,7 @@
                <use xlink:href="img/sprite.svg#play"></use>
             </svg>
          </button>
-         <button class="btn-reset video-block__muted" aria-label="Mute video">
-            <svg>
-               <use xlink:href="img/sprite.svg#mute"></use>
-            </svg>
-         </button>
-         <video class="about-section__video" src="Construction equipment.mp4" muted loop preload="metadata"></video>
+         <video class="video-block__content video" src="Construction-equipment.mp4" muted loop preload="metadata"></video>
       </div>
    </div>
 </section>
