--- a/src/partials/positions-content.html
+++ b/src/partials/positions-content.html
@@ -13,7 +13,7 @@
                         </div>
                         <h3 class="positions-item__title">Heavy Equipment Operator</h3>
                      </div>
-                     <a class="btn btn--stroke-primary positions-item__link">Apply now</a>
+                     <a href="#" class="btn btn--stroke-primary positions-item__link">Apply now</a>
                   </article>
                </li>
                <li class="positions-list__item">
@@ -25,7 +25,7 @@
                         </div>
                         <h3 class="positions-item__title">Financial Compliance Analyst</h3>
                      </div>
-                     <a class="btn btn--stroke-primary positions-item__link">Apply now</a>
+                     <a href="#" class="btn btn--stroke-primary positions-item__link">Apply now</a>
                   </article>
                </li>
                <li class="positions-list__item">
@@ -37,7 +37,7 @@
                         </div>
                         <h3 class="positions-item__title">Project Manager - Buildings</h3>
                      </div>
-                     <a class="btn btn--stroke-primary positions-item__link">Apply now</a>
+                     <a href="#" class="btn btn--stroke-primary positions-item__link">Apply now</a>
                   </article>
                </li>
                <li class="positions-list__item">
@@ -49,7 +49,7 @@
                         </div>
                         <h3 class="positions-item__title">Environment Specialist</h3>
                      </div>
-                     <a class="btn btn--stroke-primary positions-item__link">Apply now</a>
+                     <a href="#" class="btn btn--stroke-primary positions-item__link">Apply now</a>
                   </article>
                </li>
                <li class="positions-list__item">
@@ -73,8 +73,8 @@
                </h3>
                <p class="positions-looking__descr">Send your CV or subscribe to our newsletter to receive information about new vacancies.</p>
                <div class="positions-looking__btns">
-                  <button class="btn-reset btn btn--stroke-primary positions-looking__btn positions-looking__btn--subs">subscribe</button>
-                  <button class="btn-reset btn btn--fill positions-looking__btn positions-looking__btn--send">Send cv</button>
+                  <button class="btn-reset btn btn--stroke-primary positions-looking__btn positions-looking__btn--subs" data-graph-animation="custom" data-graph-path="first">subscribe</button>
+                  <button class="btn-reset btn btn--fill positions-looking__btn positions-looking__btn--send" data-graph-animation="custom" data-graph-path="second">Send cv</button>
                </div>
             </div>
          </div>
