--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -166,8 +166,20 @@ a {
   letter-spacing: 0.5px;
   text-transform: uppercase;
   color: var(--color-light);
+  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out, color 0.3s ease-in-out;
   &--fill{
     background-color: var(--color-primary);
+
+    &:focus{
+      outline: 2px solid var(--color-primary);
+      outline-offset: 2px;
+    }
+    &:hover{
+      background-color: var(--color-active);
+    }
+    &:active{
+      background-color: var(--color-active);
+    }
   }
   &--stroke{
     &-light{
@@ -177,6 +189,18 @@ a {
     &-primary{
       color: var(--color-primary);
       border-color: var(--color-primary);
+    }
+    &:focus{
+      outline: 2px solid var(--color-primary);
+      outline-offset: 2px;
+    }
+    &:hover{
+      border-color: var(--color-primary);
+      background-color: var(--color-primary);
+    }
+    &:active{
+      border-color: var(--color-primary);
+      background-color: var(--color-primary);
     }
   }
 }
@@ -264,8 +288,229 @@ a {
     outline: 3px solid var(--color-primary);
   }
 }
+.custom-file{
+  cursor: pointer;
+  &__input{
+    position: absolute;
+    opacity: 0;
+  }
+  &__text{
+    display: inline-block;
+    position: relative;
+    padding-left: 36px;
+    font-size: 14px;
+    line-height: 170%;
+    color: var(--color-gray);
+    background-image: url("../img/file-icon.svg");
+    background-position: left center;
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+  }
+  label {
+    position: relative;
+    display: inline-block;
+  }
+  
+  input {
+    position: absolute;
+    opacity: 0;
+  }
+  
+  
+  &__input:focus + &__text {
+    outline: 3px solid var(--color-primary);
+  }
+}
+.custom-radio{
+  &__input{
+    position: absolute;
+    opacity: 0;
+  }
+  &__text{
+    display: inline-block;
+    position: relative;
+    padding-left: 27px;
+    font-size: 16px;
+    line-height: 160%;
+    color: var(--color-gray);
+  }
+  label {
+    position: relative;
+    display: inline-block;
+  }
+  
+  input {
+    position: absolute;
+    opacity: 0;
+  }
+  
+  &__text::before {
+    content: "";
+    position: absolute;
+    left: -1px;
+    top: 4px;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border: 1px solid var(--color-primary);
+    border: 1px solid #b3b7bc;
+    border-radius: 100%;
+    transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+  }
+  
+  &__text::after {
+    content: "";
+    position: absolute;
+    left: -1px;
+    top: 4px;
+    width: 16px;
+    height: 16px;
+    background-image: url("../img/check-circle.svg");
+    background-position: center;
+    background-size: 8px 8px;
+    background-repeat: no-repeat;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  &__input:checked + &__text::before {
+    border-color: var(--color-primary);
+  } 
+
+  &__input:checked + &__text::after {
+    opacity: 1;
+  }
+  
+  &__input:focus + &__text {
+    outline: 3px solid var(--color-primary);
+  }
+}
 .grid{
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 30px;
+}
+.to-top{
+  display: flex;
+  align-items: flex-end;
+  position: fixed;
+  z-index: 1000;
+  bottom: 80px;
+  right: calc((100% - 1260px) / 2);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  &__text{
+    margin-right: 16px;
+    font-size: 14px;
+    line-height: 150%;
+    text-transform: uppercase;
+    color: var(--color-light);
+  }
+  &__icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border: 4px;
+    background: var(--color-primary);
+    transition: background-color 0.3s ease-in-out;
+
+    svg{
+      width: 24px;
+      height: 24px;
+      object-fit: cover;
+      fill: var(--color-light);
+    }
+    &:hover{
+      background-color: var(--color-active);
+    }
+  }
+  &--active{
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.site-modal{
+  width: 468px;
+  padding: 48px;
+  border-radius: 4px;
+  .graph-modal__close{
+    right: 24px;
+    top: 24px;
+    background-image: url("../img/close-modal.svg");
+    width: 24px;
+    height: 24px;
+  }
+  &__title{
+    margin: 0;
+    margin-bottom: 24px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 150%;
+    text-align: center;
+    color: var(--color-ebony);
+  }
+  &__field{
+    margin-bottom: 20px;
+  }
+  &__btn{
+    margin-top: 20px;
+    width: 100%;
+  }
+  .choices{
+    width: 100%;
+ }
+ .is-focused{
+    outline: 2px solid var(--color-primary);
+    outline-offset: 2px; 
+ }
+ 
+ .choices__inner{
+    padding: 0;
+    margin: 0;
+    height: 52px;
+    border: 1px solid #d7dadd;
+    background-color: var(--color-athens);
+ }
+ 
+ .choices__list--single .choices__placeholder{
+    font-size: 16px;
+    line-height: 160%;
+    color: #9A9CA5;
+    opacity: 1;
+ }
+ .choices[data-type*=select-one] .choices__inner{
+    padding-bottom: 0;
+ }
+ .choices__list--single{
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+    height: 100%;
+ }
+ .choices[data-type*=select-one]::after{
+    right: 19px;
+    margin-top: 0;
+    border: none;
+    width: 14px;
+    height: 7px;
+    background-image: url("../img/angle-down.svg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-50%);
+    transition: transform 0.3s ease-in-out;
+ }
+ .choices[data-type*=select-one].is-open::after{
+    margin-top: -7px;
+    transform: rotate(180deg) translateY(-50%);
+ }
+ .choices__list--dropdown .choices__item--selectable::after{
+    display: none;
+ }
+ .choices__list--dropdown{
+    background-color: var(--color-athens);
+ }
 }
