--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,6 +10,8 @@
   --color-ebony: #1e212c;
   --color-primary: #ff5a30;
   --color-athens: #f4f5f7;
+  --color-active: #fc3300;
+
   --grid-gap: 30px;
   --grid-cols: 12;
 
