--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -109,6 +109,17 @@
       }
       a{
          color: inherit;
+         transition: color 0.3s ease-in-out;
+         &:focus{
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
+          }
+          &:hover{
+             color: var(--color-light);
+          }
+          &:active{
+            color: var(--color-light);
+         }
       }
    }
    &__name{
@@ -132,5 +143,16 @@
       font-size: 16px;
       line-height: 160%;
       color: inherit;
+      transition: color 0.3s ease-in-out;
+      &:focus{
+         outline: 2px solid var(--color-primary);
+         outline-offset: 2px;
+       }
+       &:hover{
+          color: var(--color-light);
+       }
+       &:active{
+         color: var(--color-light);
+      }
    }
 }
