--- a/src/scss/components/_header-contacts.scss
+++ b/src/scss/components/_header-contacts.scss
@@ -29,6 +29,21 @@
             display: flex;
             align-items: center;
             color: var(--color-ebony);
+            transition: color 0.3s ease-in-out;
+         }
+         &:focus{
+            outline-offset: 2px solid var(--color-primary);
+            outline: 1px solid var(--color-primary);
+         }
+         &:hover{
+            .contacts-link__value{
+               color: var(--color-primary);
+            }
+         }
+         &:active{
+            .contacts-link__value{
+               color: var(--color-active);
+            }
          }
          &--call{
             background-image: url("../img/iPhone.svg");
