--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,3 +14,9 @@
       width: 100%;
    }
 }
+.logo{
+   &:focus{
+      outline-offset: 2px solid var(--color-primary);
+      outline: 1px solid var(--color-primary);
+   }
+}
