--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -12,6 +12,18 @@
       font-size: 16px;
       line-height: 26px;
       color: var(--color-gray);
+      transition: color 0.3s ease-in-out;
+
+      &:focus{
+         outline-offset: 2px solid var(--color-primary);
+         outline: 1px solid var(--color-primary);
+      }
+      &:hover{
+         color: var(--color-primary);
+      }
+      &:active{
+         color: var(--color-active);
+      }
 
       &--current{
          color: var(--color-primary);
