--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -73,6 +73,7 @@
    font-size: 16px;
    line-height: 160%;
    color: var(--color-gray);
+   transition: color 0.3s ease-in-out;
    svg{
       margin-right: 16px;
       width: 24px;
@@ -80,5 +81,26 @@
       color: inherit;
       fill: currentColor;
       object-fit: cover;
+   }
+   &:focus{
+      outline: 2px solid var(--color-primary);
+      outline-offset: 2px;
+    }
+   &:hover{
+      color: var(--color-primary);
+   }
+   &:active{
+      color: var(--color-active);
+   }
+}
+.portfolio-tabs-nav__btn{
+   &:focus{
+      outline: 2px solid var(--color-primary);
+      outline-offset: 2px;
+    }
+   &:hover{
+      .portfolio-tabs-nav__text{
+         color: var(--color-ebony);
+      }
    }
 }
