--- a/src/scss/components/_slider-nav.scss
+++ b/src/scss/components/_slider-nav.scss
@@ -20,9 +20,17 @@
          object-fit: cover;
          fill: currentColor;
       }
+      &:focus{
+         outline: 2px solid var(--color-primary);
+         outline-offset: 2px;
+       }
       &:hover{
          color: var(--color-light);
          background-color: var(--color-primary);
+      }
+      &:active{
+         color: var(--color-light);
+         background-color: var(--color-active);
       }
    }
 }
