--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -19,6 +19,19 @@
          fill: var(--color-light);
          opacity: 0.6;
          object-fit: cover;
+         transition: opacity 0.3s ease-in-out;
+      }
+      &:focus{
+         outline: 2px solid var(--color-primary);
+         outline-offset: 2px;
+       }
+       &:hover{
+          svg{
+            opacity: 1;
+          }
+       }
+       &:active{
+         opacity: 1;
       }
    }
 }
