--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,3 +52,5 @@
 @import "./components/post-comments";
 @import "./components/comment";
 @import "./components/post-form";
+@import "./components/contacts";
+@import "./components/contacts-info";
