--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,5 +1,8 @@
 @import "./vendor/normalize";
 @import "./vendor/swiper.min";
+@import "./vendor/choise.min";
+@import "./vendor/graph-accordion";
+@import "./vendor/graph-modal.min";
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min"
 
