final projects with adaptive

--- a/src/scss/components/_about-mission.scss
+++ b/src/scss/components/_about-mission.scss
@@ -7,6 +7,15 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr); 
       gap: calc(var(--about-mission-gap) * 2);
+      @include tablet{
+         --about-mission-gap: 30px;
+      }
+      @include minitablet{
+         --about-mission-gap: 10px;
+      }
+      @include mobile{
+         display: block;
+      }
    }
    &__item{
       position: relative;
@@ -36,6 +45,11 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+         }
+      }
+      @include mobile{
+         &:not(:last-child){
+            margin-bottom: 30px;
          }
       }
    }
