--- a/src/scss/components/_employee-benefits.scss
+++ b/src/scss/components/_employee-benefits.scss
@@ -8,6 +8,15 @@
       grid-template-columns: repeat(3, 1fr); 
       margin-bottom: 27px;
       gap: calc(var(--employee-benefits-gap) * 2);
+      @include tablet{
+         --employee-benefits-gap: 30px;
+      }
+      @include minitablet{
+         --employee-benefits-gap: 10px;
+      }
+      @include mobile{
+         display: block;
+      }
    }
    &__item{
       position: relative;
@@ -39,6 +48,11 @@
             background-repeat: no-repeat;
          }
       }
+      @include mobile{
+         &:not(:last-child){
+            margin-bottom: 30px;
+         }
+      }
    }
 
    &__subtitle{
@@ -53,5 +67,8 @@
       font-size: 16px;
       line-height: 160%;
       color: var(--color-storm);
+   }
+   @include mobile{
+      padding-bottom: 40px;
    }
 }
