--- a/src/scss/components/_positions-content.scss
+++ b/src/scss/components/_positions-content.scss
@@ -59,6 +59,11 @@
       background-repeat: no-repeat;
       padding-left: 23px;
    }
+   &__left{
+      @include tablet{
+         margin-bottom: 20px;
+      }
+   }
    &__title{
       margin: 0;
       font-weight: 700;
@@ -84,6 +89,10 @@
          color: var(--color-active);
       }
    }
+   @include tablet{
+      flex-direction: column;
+      align-items: flex-start;
+   }
 }
 .positions-looking{
    width: 390px;
@@ -101,6 +110,16 @@
       font-size: 18px;
       line-height: 150%;
       color: var(--color-gray);
+   }
+   &__btns{
+      @include tablet{
+         display: flex;
+         flex-direction: column;
+         .positions-looking__btn--subs{
+            margin-right: 0;
+            margin-bottom: 20px;
+         }
+      }
    }
    &__btn{
       &--subs{
