--- a/src/scss/components/_services-section.scss
+++ b/src/scss/components/_services-section.scss
@@ -12,11 +12,24 @@
    &__list{
       margin-bottom: 80px;
    }
+   @include mobile{
+      padding: 40px 0;
+   }
 }
 .services-list{
    gap: var(--grid-gap);
    &__item{
       grid-column: 3 span;
+
+      @include tablet {
+         grid-column: 6 span;
+      }
+      @include mobile{
+         grid-column: 4 span;
+      }
+   }
+   @include mobile{
+      grid-template-columns: repeat(4, 1fr);
    }
 }
 .services-item{
@@ -93,6 +106,11 @@
       text-align: center;
       color: var(--color-ebony);
       transition: color 0.3s ease-in-out;
+
+      
+      @include minidesk{
+         font-size: 18px;
+      }
    }
    &:hover{
       &::before{
