--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -34,6 +34,9 @@
             visibility: visible;
          }
       }
+      @include tablet{
+         grid-column: 6 span;
+      }
    }
    &__text{
       font-size: 18px;
