--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,6 +11,12 @@
         <li class="nav__item"><a href="#" class="nav__link">News</a></li>
         <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
       </ul>
+      <div class="header-contacts header-contacts--nav">
+        <a href="mailto:hello@createx.com" class="header-contacts__link contacts-link contacts-link--mail">
+          <span class="contacts-link__caption">Talk to us</span>
+          <span class="contacts-link__value">Talk to us hello@createx.com</span>
+        </a>
+      </div>
     </nav>
     <div class="header-contacts">
       <a href="tel:4055550128" class="header-contacts__link contacts-link contacts-link--call">
@@ -24,5 +30,8 @@
         <span class="contacts-link__value">Talk to us hello@createx.com</span>
       </a>
     </div>
+    <button class="btn-reset burger" aria-label="Открыть меню">
+      <span class="burger__line"></span>
+    </button>
   </div>
 </header>
