--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -141,6 +141,14 @@ a {
   &--home{
     color: var(--color-light);
   }
+  @include minitablet{
+    font-size: 60px;
+    line-height: 75px;
+  }
+  @include mobile{
+    font-size: 34px;
+    line-height: 44px;
+  }
 }
 .main-descr{
   margin: 0;
@@ -152,6 +160,19 @@ a {
     color: var(--color-light);
     margin-bottom: 60px;
   }
+  @include mobile{
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+.dis-scroll{
+  position:relative;
+  overflow:hidden;
+  height:100vh;
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
 }
 .btn{
   border-style: solid;
@@ -213,6 +234,10 @@ a {
   &--center{
     text-align: center;
   }
+  @include mobile{
+    font-size: 28px;
+    line-height: 40px;
+  }
 }
 .descr{
   margin: 0 0 60px 0;
@@ -222,9 +247,21 @@ a {
   &--center{
     text-align: center;
   }
+  @include mobile{
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 25px;
+  }
 }
 .section-offset{
   padding-top: 120px;
+
+  @include minitablet{
+    padding-top: 60px;
+  }
+  @include mobile{
+    padding-top: 40px;
+  }
 }
 .custom-checkbox{
   &__input{
@@ -389,6 +426,10 @@ a {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 30px;
+
+  @include mobile{
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 .to-top{
   display: flex;
@@ -431,6 +472,11 @@ a {
     opacity: 1;
     visibility: visible;
   }
+  
+  @include middledesk{
+    right: 20px;
+    bottom: 20px;
+ }
 }
 .site-modal{
   width: 468px;
@@ -513,4 +559,107 @@ a {
  .choices__list--dropdown{
     background-color: var(--color-athens);
  }
+}
+.burger {
+  --burger-width: 40px;
+  --burger-height: 20px;
+  --burger-line-height: 2px;
+  display: none;
+  position: absolute;
+  right: 15px;
+  top: 23px;
+  z-index: 1000;
+  display: none;
+  border: none;
+  padding: 0;
+  width: var(--burger-width);
+  height: var(--burger-height);
+  color: #000;
+  background-color: transparent;
+  cursor: pointer;
+
+  @include tablet {
+    display: block;
+  }
+}
+
+.burger::before,
+.burger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: var(--burger-line-height);
+  background-color: currentColor;
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+}
+
+.burger::before {
+  top: 0;
+}
+
+.burger::after {
+  top: calc(100% - var(--burger-line-height));
+}
+
+.burger__line {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: var(--burger-line-height);
+  background-color: currentColor;
+  transform: translateY(-50%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.burger--active::before {
+  top: 50%;
+  transform: rotate(45deg);
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+}
+
+.burger--active::after {
+  top: 50%;
+  transform: rotate(-45deg);
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+}
+
+.burger--active .burger__line {
+  transform: scale(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.burger:focus::after {
+  opacity: 1;
+}
+
+.overlay{
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 500;
+  background-color: rgba(#000, 0.6);
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  &--active{
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.modal{
+  @include mobile{
+    &::before{
+      display: none;
+    }
+  }
+}
+.site-modal{
+  @include mobile{
+    padding: 20px;
+    padding-top: 40px;
+    width: 90%;
+  }
 }
