--- a/src/scss/components/_achieve.scss
+++ b/src/scss/components/_achieve.scss
@@ -24,6 +24,17 @@
       &--finish{
          background-image: url("../img/pantone.svg");
       }
+      @include tablet{
+         grid-column: 6 span;
+      }
+   }
+   &__image{
+      @include minidesk{
+         max-width: 45%;
+      }
+      @include tablet{
+         max-width: 100%;
+      }
    }
    &__value{
       margin-bottom: 10px;
@@ -31,6 +42,10 @@
       font-size: 46px;
       line-height: 130%;
       color: var(--color-primary);
+      @include minidesk{
+         font-size: 36px;
+         line-height: 54px;
+      }
    }
    &__text{
       text-align: center;
@@ -44,6 +59,9 @@
    &__content{
       display: flex;
       align-items: flex-start;
+      @include tablet {
+         display: block;
+      }
    }
    &__info{
       position: relative;
@@ -58,6 +76,17 @@
       box-shadow: var(--main-shadow);
       border-radius: 4px;
       width: 735px;
+      @include minidesk{
+         width: 55%;
+         left: 0;
+         top: 0;
+      }
+      @include tablet{
+         width: 100%;
+      }
+      @include mobile{
+         padding: 15px ;
+      }
    }
 }
 .quote{
@@ -78,6 +107,9 @@
          background-repeat: no-repeat;
          background-size: cover;
          background-position: center;
+         @include mobile{
+            left: 0;
+         }
       }
       p{
          margin: 0;
@@ -89,6 +121,11 @@
             margin-bottom: 30px;
          }
       }
+      @include mobile{
+         padding: 0;
+         padding-bottom: 20px;
+         padding-top: 40px;
+      }
    }
    &__footer{
       padding: 20px 53px;
@@ -99,6 +136,10 @@
       background-size: 100px 68px;
       background-position: right 65px center;
       background-repeat: no-repeat;
+      @include mobile{
+         padding-bottom: 120px;
+         background-position: bottom 30px center;
+      }
    }
    &__author{
       display: block;
