--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -5,6 +5,9 @@
    &__title{
       margin-bottom: 39px;
    }
+   @include mobile{
+      padding: 40px 0;
+   }
 }
 .categories-nav{
    display: flex;
@@ -12,6 +15,12 @@
    margin-bottom: 60px;
    &__item{
       width: calc(100% / 6);
+      @include tablet{
+         width: calc(100% / 3);
+      }
+      @include mobile{
+         width: 100%;
+      }
    }
    &__btn{
       border-radius: 4px;
@@ -40,6 +49,9 @@
        &:active{
          color: var(--color-active);
       }
+   }
+   @include tablet{
+      flex-wrap: wrap;
    }
 }
 .categories-list{
