--- a/src/scss/components/_comment.scss
+++ b/src/scss/components/_comment.scss
@@ -3,9 +3,16 @@
    &__left{
       width: calc(100% - 630px);
       padding-right: 30px;
+      @include tablet{
+         margin-bottom: 20px;
+         width: 100%;
+      }
    }
    &__right{
       width: 630px;
+      @include tablet{
+         width: 100%;
+      }
    }
    &__author{
       display: block;
@@ -72,5 +79,9 @@
        &:active{
          color: var(--color-active);
       }
+   }
+   @include tablet{
+      flex-direction: column;
+      align-items: flex-start;
    }
 }
