--- a/src/scss/components/_contacts-info.scss
+++ b/src/scss/components/_contacts-info.scss
@@ -9,6 +9,13 @@
       grid-template-columns: repeat(3, 1fr); 
       margin-bottom: 118px;
       gap: calc(var(--contacts-gap) * 2);
+
+      @include minidesk{
+         --contacts-gap: 40px;
+      }
+      @include minitablet{
+         display: block;
+      }
    }
    &__item{
       position: relative;
@@ -24,6 +31,12 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+            @include tablet{
+               display: none;
+            }
+         }
+         @include tablet{
+            margin-bottom: 30px;
          }
       }
    }
