--- a/src/scss/components/_facts.scss
+++ b/src/scss/components/_facts.scss
@@ -25,18 +25,39 @@
      margin: 0 auto;
      max-width: 736px;
      gap: 48px;
- 
+     @include minitablet{
+      grid-template-columns: repeat(2, 1fr);
+     }
+     @include mobile{
+       display: block;
+     }
+   }
+   &__item{
+      @include mobile{
+        &:not(:last-child){
+          margin-bottom: 30px;
+        }
+      }
    }
  
  
    &__title {
      margin-bottom: 62px;
- 
+     @include mobile{
+      margin-bottom: 25px;
+     }
    }
- 
+    @include mobile{
+      padding: 40px 0;
+    }
  }
  
  .facts-element {
+  @include minitablet{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
    &__circle {
      --progress-stroke: #000;
      --progress-bg-opacity: 0.3;
