--- a/src/scss/components/_header-contacts.scss
+++ b/src/scss/components/_header-contacts.scss
@@ -8,48 +8,60 @@
          margin-right: 35px;
       }
 	}
-   .contacts-link {
-      padding-left: 53px;
-      background-position: left center;
-      background-size: 40px 40px;
-      background-repeat: no-repeat;
-         &__caption {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 150%;
-            display: flex;
-            align-items: center;
-            color: var(--color-gray);
-         }
-
-         &__value {
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 150%;
-            display: flex;
-            align-items: center;
-            color: var(--color-ebony);
-            transition: color 0.3s ease-in-out;
-         }
-         &:focus{
-            outline-offset: 2px solid var(--color-primary);
-            outline: 1px solid var(--color-primary);
-         }
-         &:hover{
-            .contacts-link__value{
-               color: var(--color-primary);
-            }
-         }
-         &:active{
-            .contacts-link__value{
-               color: var(--color-active);
-            }
-         }
-         &--call{
-            background-image: url("../img/iPhone.svg");
-         }
-         &--mail{
-            background-image: url("../img/Chat.svg");
-         }
+   &--nav{
+      display: none;
+      @include tablet{
+         display: block;
+      }
    }
+   @include tablet{
+      display: none;
+   }
+}
+.contacts-link {
+   padding-left: 53px;
+   background-position: left center;
+   background-size: 40px 40px;
+   background-repeat: no-repeat;
+      &__caption {
+         font-weight: 700;
+         font-size: 14px;
+         line-height: 150%;
+         display: flex;
+         align-items: center;
+         color: var(--color-gray);
+      }
+
+      &__value {
+         font-weight: 400;
+         font-size: 18px;
+         line-height: 150%;
+         display: flex;
+         align-items: center;
+         color: var(--color-ebony);
+         transition: color 0.3s ease-in-out;
+         @include minidesk{
+            font-size: 16px;
+         }
+      }
+      &:focus{
+         outline-offset: 2px solid var(--color-primary);
+         outline: 1px solid var(--color-primary);
+      }
+      &:hover{
+         .contacts-link__value{
+            color: var(--color-primary);
+         }
+      }
+      &:active{
+         .contacts-link__value{
+            color: var(--color-active);
+         }
+      }
+      &--call{
+         background-image: url("../img/iPhone.svg");
+      }
+      &--mail{
+         background-image: url("../img/Chat.svg");
+      }
 }
