--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -6,6 +6,11 @@
       .btn{
          &:not(:last-child){
             margin-right: 20px;
+
+            @include mobile{
+               margin-right: 0;
+               margin-bottom: 20px;
+            }
          }
       }
    }
@@ -16,6 +21,10 @@
       z-index: 10;
       background-color: var(--color-light);
       transform: translateY(-50%);
+
+      @include middledesk{
+         display: none;
+      }
    }
    &__prev{
       position: absolute;
@@ -24,6 +33,9 @@
       z-index: 10;
       background-color: var(--color-light);
       transform: translateY(-50%);
+      @include middledesk{
+         display: none;
+      }
    }
    
    &__pag{
@@ -52,6 +64,22 @@
          &::after{
             display: none;
          }
+         @include minitablet{
+            width: 25%;
+         }
+      }
+      @include middledesk{
+         left: 3% !important;
+      }
+      @include minidesk{
+         left: 15px !important;
+      }
+      @include minitablet{
+         bottom: 50px !important;
+         width: calc(100% - 30px) !important;
+      }
+      @include mobile{
+         display: none;
       }
    }
    &__bar{
@@ -98,4 +126,12 @@
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
+
+   @include minitablet{
+      padding-top: 200px;
+      padding-bottom: 200px;
+   }
+   @include mobile{
+      padding: 100px 0;
+   }
 }
