--- a/src/scss/components/_how-we-do.scss
+++ b/src/scss/components/_how-we-do.scss
@@ -32,7 +32,14 @@
             height: 1px;
             width: 75%;
             background-image: url("../img/how-we-do-line.svg");
+
+            @include tablet{
+               display: none;
+            }
          }
+      }
+      @include tablet{
+         grid-column: 6 span;
       }
    }
    &__subtitle{
