--- a/src/scss/components/_missions.scss
+++ b/src/scss/components/_missions.scss
@@ -7,6 +7,15 @@
       grid-template-columns: repeat(3, 1fr); 
       margin-bottom: 27px;
       gap: calc(var(--mission-gap) * 2);
+      @include tablet{
+         --mission-gap: 30px;
+      }
+      @include minitablet{
+         --mission-gap: 10px;
+      }
+      @include mobile{
+         display: block;
+      }
    }
    &__item{
       position: relative;
@@ -36,6 +45,11 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+         }
+      }
+      @include mobile{
+         &:not(:last-child){
+            margin-bottom: 30px;
          }
       }
    }
@@ -74,11 +88,36 @@
    &__content{
       display: flex;
       align-items: flex-end;
+      @include tablet{
+         flex-wrap: wrap;
+         justify-content: space-between;
+
+         & > *{
+            margin-right: 0 !important;
+            margin-bottom: 20px;
+            width: 49%;
+            flex-grow: initial;
+
+            .form-field__input{
+               width: 100%;
+            }
+            @include mobile{
+               width: 100%;
+            }
+         }
+      }
+      @include mobile{
+         display: block;
+      }
    }
    &__field{
       margin-right: 24px;
    }
    &__btn{
       padding: 11px 29px;
+   }
+   @include mobile{
+      top: initial;
+      padding: 10px 15px;
    }
 }
