--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,10 +1,18 @@
 .nav {
    &__list {
       @include flex-v-center;
+      @include tablet{
+         margin-bottom: 40px;
+         display: block;
+      }
    }
    &__item {
       &:not(:last-child){
          margin-right: 40px;
+         @include tablet{
+            margin-right: 0;
+            margin-bottom: 50px;
+         }
       }
    }
    &__link {
@@ -28,5 +36,8 @@
       &--current{
          color: var(--color-primary);
       }
+   }
+   @include tablet{
+      margin-bottom: 40px;
    }
 }
