--- a/src/scss/components/_news-article.scss
+++ b/src/scss/components/_news-article.scss
@@ -20,6 +20,10 @@
       &--big{
          height: 360px;
       }
+      @include tablet{
+         width: 100%;
+         object-fit: cover;
+      }
    }
    &__link{
       font-weight: 700;
