--- a/src/scss/components/_page-hero.scss
+++ b/src/scss/components/_page-hero.scss
@@ -29,6 +29,10 @@
       &--mb{
          margin-bottom: 60px;
       }
+      @include mobile{
+         font-size: 40px;
+         line-height: 54px;
+      }
    }
    &__descr{
       margin: 0;
@@ -36,10 +40,19 @@
       line-height: 150%;
       color: var(--color-storm);
       max-width: 600px;
+      @include mobile{
+         font-size: 16px;
+         line-height: 24px;
+      }
    }
    &__bottom{
       display: flex;
       justify-content: space-between;
+
+      @include mobile{
+         flex-direction: column;
+         align-items: flex-start;
+      }
    }
    &__meta{
       .article-meta__item{
@@ -66,6 +79,12 @@
       }
       .article-meta__item:not(:last-child){
          margin-right: 25px;
+         @include mobile{
+            margin-right: 23px;
+         }
+      }
+      @include mobile{
+         margin-bottom: 20px;
       }
    }
    &__social{
@@ -106,9 +125,24 @@
          letter-spacing: 1px;
          text-transform: initial;
          max-width: none;
+         @include minitablet{
+            font-size: 45px;
+            line-height: 58px;
+         }
+         @include mobile{
+            font-size: 35px;
+            line-height: 48px;
+         }
+      }
+      @include minidesk{
+         margin-bottom: 30px;
       }
    }
    &--contacts{
       background-image: url("../img/contants-hero-bg.png");
+   }
+   @include tablet{
+      min-height: auto;
+      background-image: none;
    }
 }
