--- a/src/scss/components/_portfolio-item.scss
+++ b/src/scss/components/_portfolio-item.scss
@@ -19,6 +19,9 @@
       font-size: 20px;
       line-height: 150%;
       color: var(--color-ebony);
+      @include minidesk{
+         font-size: 18px;
+      }
    }
    &__descr{
       display: inline-block;
@@ -40,6 +43,10 @@
       border-radius: 4px;
       transition: margin-bottom 0.3s ease-in-out;
       will-change: margin;
+
+      @include minitablet{
+         margin-bottom: 0;
+      }
    }
    &:focus{
       outline: 2px solid var(--color-primary);
