--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -13,6 +13,15 @@
       &:not(:last-child){
          margin-right: 20px;
       }
+
+      @include minitablet{
+         margin-bottom: 20px;
+         width: calc((100% - (var(--gap) * 2)) / 3);
+      }
+      @include mobile{
+         margin-right: 0 !important;
+         width: 100%;
+      }
    }
    &__btn{
       @include flex-column-center;
@@ -52,6 +61,12 @@
       color: var(--color-storm);
       transition: color 0.3s ease-in-out;
       pointer-events: none;
+   }
+   @include minitablet{
+      flex-wrap: wrap;
+      justify-content: center;
+      transform: none;
+      margin-top: 30px;
    }
 }
 .portfolio-tabs{
