--- a/src/scss/components/_post-form.scss
+++ b/src/scss/components/_post-form.scss
@@ -27,6 +27,13 @@
          .form-field__input{
             height: 100px;
          }
+         @include mobile{
+            margin-top: 0;
+         }
+      }
+      @include mobile{
+         width: 100%;
+         margin-bottom: 20px;
       }
    }
 }
