--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -77,6 +77,10 @@
             background-repeat: no-repeat;
             background-size: cover;
          }
+         @include mobile{
+            padding: 0;
+            padding-top: 50px;
+         }
       }
       ul{
          margin: 0;
