--- a/src/scss/components/_pricing.scss
+++ b/src/scss/components/_pricing.scss
@@ -20,6 +20,10 @@
    border: 1px solid #E5E8ED;
    box-shadow: var(--main-shadow);
    border-radius: 4px;
+
+   @include minitablet{
+      overflow-x: auto;
+   }
 }
 .table{
    border-collapse: collapse;
@@ -88,6 +92,10 @@
          &:focus{
             outline: 2px solid var(--color-primary);
          }
+
+         @include tablet{
+            padding: 0 10px;
+         }
       }
    }
    &__check{
@@ -105,5 +113,8 @@
       font-size: 16px;
       line-height: 160%;
       color: var(--color-ebony);
+   }
+   @include minitablet{
+      width: 1200px;
    }
 }
