--- a/src/scss/components/_project-goal.scss
+++ b/src/scss/components/_project-goal.scss
@@ -1,6 +1,12 @@
 .project-goal{
    padding-top: 30px;
    padding-bottom: 120px;
+
+   .grid{
+      @include minitablet{
+         display: block;
+      }
+   }
    &__left{
       grid-column: 6 span;
       padding-top: 24px;
@@ -9,6 +15,9 @@
       display: flex;
       justify-content: flex-end;
       grid-column: 6 span;
+      @include minitablet{
+        justify-content: flex-start;
+      }
    }
    &__title{
       margin-bottom: 41px;
@@ -36,6 +45,7 @@
       }
    }
    &__category{
+      flex-shrink: 0;
       width: 130px;
       font-weight: 700;
       font-size: 16px;
@@ -48,5 +58,11 @@
       font-size: 16px;
       line-height: 160%;
       color: var(--color-storm);
+   }
+   @include minitablet{
+      width: 100%;
+   }
+   @include mobile{
+      padding: 10px 0;
    }
 }
