--- a/src/scss/components/_services-content.scss
+++ b/src/scss/components/_services-content.scss
@@ -34,6 +34,10 @@
          .services__info{
             padding-left: 0;
             order: -1;
+
+            @include mobile{
+               order: initial;
+            }
          }
          .services__image{
             display: flex;
