--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -3,11 +3,29 @@
    background-color: var(--color-athens);
    &__content{
       max-width: 612px;
+      @include tablet{
+         max-width: 445px;
+      }
+      @include mobile{
+         max-width: none;
+         width: 100%;
+      }
    }
    &__image{
       margin-bottom: -60px;
       position: relative;
       z-index: 5;
+      @include minidesk{
+         width: 380px;
+         object-fit: cover;
+      }
+      @include tablet{
+         width: 280px;
+         object-fit: cover;
+      }
+      @include minitablet{
+         display: none;
+      }
    }
    &__title{
       margin-bottom: 60px;
@@ -25,6 +43,10 @@
       display: flex;
       justify-content: space-between;
    }
+   @include minitablet{
+      padding-top: 40px;
+      padding-bottom: 40px;
+   }
 }
 .testimonials-item{
    &__image{
@@ -39,6 +61,7 @@
          height: 100%;
          object-fit: cover;
       }
+
    }
    &__descr{
       margin: 0;
