--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -5,9 +5,13 @@
     @content;
   }
 }
-
-@mixin big-desktop {
+@mixin middledesk {
   @media (max-width: (1440px)) {
+    @content;
+  }
+}
+@mixin minidesk {
+  @media (max-width: (1200px)) {
     @content;
   }
 }
@@ -18,7 +22,7 @@
   }
 }
 
-@mixin small-tablet {
+@mixin minitablet {
   @media (max-width: (768px)) {
     @content;
   }
